# experiment

./: .gitignore  MH_01_easy_leica_position.csv  README.md  calibration.json  combined_odom_log_20260129_181107.csv  combined_odom_log_20260129_181447.csv  combined_odom_log_20260202_124354.csv  combined_odom_log_20260202_134311.csv  odom_log_20260129_172938.csv  odom_log_20260129_180647.csv  odom_log_20260203_110202.csv  odom_log_20260203_125424.csv  odom_log_20260203_130522.csv  odom_log_20260203_132935.csv  square_compare_log_20260202_134841.csv  square_compare_log_20260202_135147.csv  square_compare_log_20260203_110045.csv  square_compare_log_20260203_124341.csv  square_compare_log_20260203_124744.csv  square_compare_log_20260203_131032.csv  square_compare_log_20260203_131925.csv  square_compare_log_20260203_132356.csv  square_compare_log_20260212_125044.csv  square_compare_log_20260224_162251.csv  square_gradual_log_20260210_140728.csv  square_gradual_log_20260210_140800.csv  square_gradual_log_20260216_142509.csv  square_gradual_log_20260216_144011.csv  square_gradual_log_20260216_161708.csv  square_gradual_log_20260218_135826.csv  square_gradual_log_20260218_135928.csv  square_gradual_log_20260218_143955.csv  square_gradual_log_20260218_145049.csv  square_gradual_log_20260218_154910.csv  square_gradual_log_20260218_160313.csv  square_gradual_log_20260218_160517.csv  square_gradual_log_20260218_160721.csv  square_gradual_log_20260218_170845.csv  square_gradual_log_20260218_171029.csv  square_gradual_log_20260218_171219.csv  (+17 more)
docs/: euroc_cuvslam_preparation.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/forward_odom/lib/forward_odom/: forward_odom
install/forward_odom/share/forward_odom/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/forward_vs/lib/forward_vs/: forward_vs
install/forward_vs/share/forward_vs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/infra_enhancer/lib/infra_enhancer/: infra_enhancer_node
install/infra_enhancer/share/infra_enhancer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/infra_enhancer/share/infra_enhancer/launch/: infra_pipeline_launch.py
install/rotate_odom/lib/rotate_odom/: rotate_odom  rotate_vs
install/rotate_odom/share/rotate_odom/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rotate_vs/lib/rotate_vs/: rotate_vs
install/rotate_vs/share/rotate_vs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/square_gradual/lib/square_gradual/: square_gradual
install/square_gradual/share/square_gradual/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/square_odom/lib/square_odom/: square_odom
install/square_odom/share/square_odom/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/square_vs/lib/square_vs/: square_vs
install/square_vs/share/square_vs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
results/: odom_log_20260203_110202.csv  odom_log_20260203_125424.csv  odom_log_20260203_130522.csv  odom_log_20260203_132935.csv  square_compare_log_20260203_110045.csv  square_compare_log_20260203_124341.csv  square_compare_log_20260203_124744.csv  square_compare_log_20260203_131032.csv  square_compare_log_20260203_131925.csv  square_compare_log_20260203_132356.csv  square_compare_log_20260212_125044.csv  square_gradual_log_20260210_140728.csv  square_gradual_log_20260210_140800.csv
scripts/: add_camera_info_to_ros2_bag.py  ask_ai_isaac_ros_visual_slam_review.sh  ask_ai_rosbag_eval_review.sh  diagnose_euroc_bag.py  euroc_rviz_helper.py  export_leica_position_csv.py  rectify_euroc_stereo_bag.py  restamp_ros2_bag_by_header.py
src/: Reinforcement_Learning_An_Introduction
src/forward_odom/: package.xml  setup.cfg  setup.py
src/forward_odom/forward_odom/: forward_odom.py
src/forward_vs/: setup.cfg  setup.py
src/forward_vs/forward_vs/: forward_vs.py
src/infra_enhancer/: package.xml  setup.cfg  setup.py
src/infra_enhancer/infra_enhancer/: __init__.py  clahe_node.py  edge_node.py  enhancer_node.py  feature_overlay_node.py  ldfe_node.py  selective_enhancer_node.py  spike_node.py  unsharp_node.py
src/infra_enhancer/launch/: bilateral_ldfe_launch.py  bilateral_ldfe_sobel_launch.py  bilateral_ldfe_unsharp_launch.py  edge_pipeline_launch.py  feature_compare_launch.py  infra_enhancer_launch.py  ldfe_pipeline_launch.py  mh01_ldfe_pipeline_launch.py  mh01_selective_enhancer_launch.py  spike_pipeline_launch.py
src/infra_image_enhancer/: package.xml  setup.py
src/infra_image_enhancer/infra_image_enhancer/: __init__.py  enhancer_node.py
src/mh01_eval_logger/: README.md  package.xml  setup.cfg  setup.py
src/mh01_eval_logger/launch/: mh01_eval_logger.launch.py  mh01_metrics.launch.py
src/mh01_eval_logger/mh01_eval_logger/: mh01_eval_logger.py  mh01_metrics_node.py
src/orchard_vslam_preprocess/: CMakeLists.txt  README.md  package.xml
src/orchard_vslam_preprocess/config/: orchard_vslam_preprocess.yaml
src/orchard_vslam_preprocess/include/orchard_vslam_preprocess/: orchard_vslam_preprocess_node.hpp
src/orchard_vslam_preprocess/launch/: mh01_orchard_vslam_preprocess.launch.py  orchard_vslam_preprocess.launch.py
src/orchard_vslam_preprocess/src/: orchard_vslam_preprocess_node.cpp
src/rotate_odom/: package.xml  setup.cfg  setup.py
src/rotate_odom/rotate_odom/: rotate_odom.py
src/rotate_vs/: setup.cfg  setup.py
src/rotate_vs/rotate_vs/: rotate_vs.py
src/square_gradual/: setup.cfg  setup.py
src/square_gradual/square_gradual/: square_gradual.py
src/square_gradual/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/square_odom/: setup.cfg  setup.py
src/square_odom/square_odom/: square_odom.py
src/square_vs/: package.xml  setup.cfg  setup.py
src/square_vs/square_vs/: square_vs.py
