[develop]
script_dir=$base/lib/infra_enhancer
[install]
install_scripts=$base/lib/infra_enhancer

[metadata]
name = infra_enhancer
version = 0.1.0

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    cv_bridge
    opencv-python

[options.entry_points]
console_scripts =
    infra_enhancer_node = infra_enhancer.enhancer_node:main
    denoise_node = infra_enhancer.denoise_node:main
    clahe_node = infra_enhancer.clahe_node:main
    normalize_node = infra_enhancer.normalize_node:main
    ldfe_node = infra_enhancer.ldfe_node:main
